--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta
 			name="keywords"
-			content="Nasa,About us, gallery, search, nasa database, space"
+			content="Nasa,About us, gallery, search, nasa database, space,nasa logo,nasa wallpaper"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="Are Olav Andreassen" />
