--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="Contact" />
-		<meta name="keywords" content="Nasa,contact, contact nasa, space" />
+		<meta
+			name="keywords"
+			content="Nasa,contact, contact nasa, space, rockets, science, astronaut,nasa contact email,how to contact nasa"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="Are Olav Andreassen" />
 		<title>Contact | Nasa</title>
@@ -32,7 +35,7 @@
 				<h1>Contact</h1>
 				<div class="form-group">
 					<input
-						class="form-control"
+						type="text"
 						name="firstName"
 						id="firstName"
 						placeholder="First name"
@@ -42,7 +45,7 @@
 
 				<div class="form-group">
 					<input
-						class="form-control"
+						type="text"
 						name="lastName"
 						id="lastName"
 						placeholder="Last name"
@@ -51,19 +54,14 @@
 				</div>
 
 				<div class="form-group">
-					<input
-						class="form-control"
-						name="email"
-						id="email"
-						placeholder="Email"
-					/>
+					<input type="text" name="email" id="email" placeholder="Email" />
 					<div class="form-error" id="emailError"></div>
 					<div class="form-error" id="invalidEmailError"></div>
 				</div>
 
 				<div class="form-group">
 					<textarea
-						class="form-control"
+						type="text"
 						name="message"
 						id="message"
 						placeholder="Message (at least 10 characters)"
@@ -71,13 +69,13 @@
 					<div class="form-error" id="messageError"></div>
 				</div>
 
-				<button type="submit" id="submit">
+				<button type="submit" class="subbtn" id="submit">
 					Submit
 				</button>
 			</form>
 			<div class="nasamap">
 				<h1 id="mapHeader">Our position</h1>
-				<div id="map"></div>
+				<div id="home"></div>
 				<h2 id="mapbtm">300 E St SW, Washington, DC 20546, USA</h2>
 			</div>
 		</main>
@@ -106,7 +104,7 @@
 		<script
 			async
 			defer
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn6GSo9BHJyikO6v-ab8DsLJ2J1OvA12o&callback=initMap"
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn6GSo9BHJyikO6v-ab8DsLJ2J1OvA12o&callback=homeMap"
 		></script>
 		<script src="js/map.js"></script>
 		<script src="js/script.js"></script>
